# FractionalSoftICP

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: optimize_translation.py
src/fractional_soft_icp/: __init__.py  loss.py
tests/: test_loss.py
